[package]
name = "ultrastar-txt"
version = "0.1.0"
authors = ["Robin Nehls <rust@manol.is>"]
description = "A library for parsing and generating Ultrastar TXT files"
license = "MIT"

[features]
default = ["file-support"]
file-support = ["chardet", "encoding"]

[dependencies]
regex = "0.2"
lazy_static = "0.2"
chardet = {version = "0.2", optional = true}
encoding = {version = "0.2", optional = true}
error-chain = "0.11"
