[package]
name = "ultrastar-txt"
version = "0.1.1"
authors = ["Robin Nehls <rust@manol.is>"]
description = "A library for parsing and generating Ultrastar TXT files"
license = "MIT"
documentation = "https://docs.rs/ultrastar-txt"
repository = "https://github.com/man0lis/ultrastar-txt"
readme = "README.md"
keywords = ["ultrastar", "parser", "karaoke"]
categories = ["parsing"]
travis-ci = { repository = "man0lis/ultrastar-txt", branch = "master" }

[features]
default = ["file-support"]
file-support = ["chardet", "encoding"]

[dependencies]
regex = "0.2"
lazy_static = "1"
chardet = {version = "0.2", optional = true}
encoding = {version = "0.2", optional = true}
error-chain = "0.11"
