[package]
name = "ultrastar-txt"
version = "0.2.0"
authors = ["Robin Nehls <rust@manol.is>"]
edition = "2018"
description = "A library for parsing and generating Ultrastar TXT files"
license = "MIT"
documentation = "https://docs.rs/ultrastar-txt"
repository = "https://github.com/man0lis/ultrastar-txt"
readme = "README.md"
keywords = ["ultrastar", "parser", "karaoke"]
categories = ["parsing"]
travis-ci = { repository = "man0lis/ultrastar-txt", branch = "master" }

[features]
default = ["file-support", "url-support"]
file-support = ["chardet", "encoding"]
url-support = ["url"]

[dependencies]
regex = "1"
lazy_static = "1"
chardet = {version = "0.2", optional = true}
encoding = {version = "0.2", optional = true}
error-chain = "0.12"
serde = {version = "1", features = ["derive"], optional = true}
url = {version="2.1.1", optional = true}

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "generate_real_song"
harness = false

[[bench]]
name = "generate_simple_song"
harness = false

[[bench]]
name = "parse_real_song"
harness = false

[[bench]]
name = "parse_simple_song"
harness = false

[lib]
bench = false
